--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -593,6 +593,13 @@
     color: $nd-color-privateoffice;
   }
 
+  &_multy {
+    background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='7.0498' width='4.27316' height='4.27316' transform='rotate(45 7.0498 0)' fill='%232CE98F'/%3E%3Crect x='3.02148' y='4.02878' width='4.27316' height='4.27316' transform='rotate(45 3.02148 4.02878)' fill='%23E14534'/%3E%3Crect x='11.0791' y='4.27316' width='4.27316' height='4.27316' transform='rotate(45 11.0791 4.27316)' fill='%2326C1F2'/%3E%3Crect x='7.0498' y='8.30194' width='4.27316' height='4.27316' transform='rotate(45 7.0498 8.30194)' fill='%23FD9B12'/%3E%3C/svg%3E ");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50% 50%;
+  }
+
   &_dark-blue {
     background-color: $nd-color-daypass;
   }
