--- a/app/blocks/filter-tag/filter-tag.scss
+++ b/app/blocks/filter-tag/filter-tag.scss
@@ -39,6 +39,26 @@
     border-radius: pxtovw(20, 375);
   }
 
+  &:first-child {
+    margin-left: 8px;
+
+    @include screen('xlg', max, 2) {
+      margin-left: pxtovw(8, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      margin-left: pxtovw(8, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin-left: pxtovw(8, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin-left: pxtovw(8, 375);
+    }
+  }
+
   &:not(:last-child) {
     margin-right: 8px;
 
