--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -218,6 +218,7 @@ $nd-color-table-border: #e9eced;
 $nd-color-messenger-bg: #e8ebec;
 $nd-button-hover-color: #0094ff;
 $nd-color-filter-border: #16181c;
+$nd-color-gray3: #ccd1d2;
 
 // ##########
 // Transitions
