--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -43,22 +43,22 @@
 
     &_styled {
       position: relative;
-      padding-top: 30px;
+      padding-top: 35px;
 
       @include screen('xlg', max, 2) {
-        padding-top: pxtovw(30, 1660);
+        padding-top: pxtovw(35, 1660);
       }
 
       @include screen('lg', max, 2) {
-        padding-top: pxtovw(30, 1366);
+        padding-top: pxtovw(35, 1366);
       }
 
       @include screen('md', max, 2) {
-        padding-top: pxtovw(30, 960);
+        padding-top: pxtovw(35, 960);
       }
 
       @include screen('sm', max, 2) {
-        padding-top: pxtovw(30, 375);
+        padding-top: pxtovw(35, 375);
       }
 
       &:not(:first-child)::before {
@@ -67,30 +67,56 @@
         top: 0;
         left: 50%;
         transform: translate3d(-50%, 0, 0);
-        width: 100vw;
+        width: 100%;
         box-sizing: border-box;
         border-top: 1px solid rgba(216, 221, 222, .71);
+
+        @include screen('sm', max, 2) {
+          width: calc(100% + ((4000 / 375) * 1vw));
+        }
       }
     }
 
-    &_mt41 {
+    &_mt30 {
       &:not(:first-child) {
-        margin-top: 41px;
+        margin-top: 30px;
 
         @include screen('xlg', max, 2) {
-          margin-top: pxtovw(41, 1660);
+          margin-top: pxtovw(30, 1660);
         }
 
         @include screen('lg', max, 2) {
-          margin-top: pxtovw(41, 1366);
+          margin-top: pxtovw(30, 1366);
         }
 
         @include screen('md', max, 2) {
-          margin-top: pxtovw(41, 960);
+          margin-top: pxtovw(30, 960);
         }
 
         @include screen('sm', max, 2) {
-          margin-top: pxtovw(40, 375);
+          margin-top: pxtovw(30, 375);
+        }
+      }
+    }
+
+    &_mt45 {
+      &:not(:first-child) {
+        margin-top: 45px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(45, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(45, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(45, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(45, 375);
         }
       }
     }
@@ -168,6 +194,34 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(28, 375);
+      }
+    }
+
+    &.is-link-inactive {
+      &:not(:first-child) {
+        margin-top: 28px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(28, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(28, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(28, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(24, 375);
+        }
+      }
+    }
+
+    &_sm-mt12 {
+      &:not(:first-child) {
+        margin-top: pxtovw(12, 375);
       }
     }
   }
@@ -578,24 +632,24 @@
   &__checklist {
     display: flex;
     justify-content: space-between;
-    margin: 0 -4px;
-    width: calc(100% + 8px);
+    margin: 0 -6px;
+    width: calc(100% + 12px);
     flex-wrap: wrap;
     box-sizing: border-box;
 
     @include screen('xlg', max, 2) {
-      margin: 0 pxtovw(-4, 1660);
-      width: calc(100% + ((800 / 1660) * 1vw));
+      margin: 0 pxtovw(-6, 1660);
+      width: calc(100% + ((1200 / 1660) * 1vw));
     }
 
     @include screen('lg', max, 2) {
-      margin: 0 pxtovw(-4, 1366);
-      width: calc(100% + ((800 / 1366) * 1vw));
+      margin: 0 pxtovw(-6, 1366);
+      width: calc(100% + ((1200 / 1366) * 1vw));
     }
 
     @include screen('md', max, 2) {
-      margin: 0 pxtovw(-4, 960);
-      width: calc(100% + ((800 / 960) * 1vw));
+      margin: 0 pxtovw(-6, 960);
+      width: calc(100% + ((1200 / 960) * 1vw));
     }
 
     @include screen('sm', max, 2) {
@@ -604,32 +658,127 @@
     }
 
     &_compress {
+      margin: 0 -7px;
+      width: calc(100% + 14px);
+
+      @include screen('xlg', max, 2) {
+        margin: 0 pxtovw(-7, 1660);
+        width: calc(100% + ((1400 / 1660) * 1vw));
+      }
+
+      @include screen('lg', max, 2) {
+        margin: 0 pxtovw(-7, 1366);
+        width: calc(100% + ((1400 / 1366) * 1vw));
+      }
+
+      @include screen('md', max, 2) {
+        margin: 0 pxtovw(-7, 960);
+        width: calc(100% + ((1400 / 960) * 1vw));
+      }
+
+      @include screen('sm', max, 2) {
+        margin: 0 pxtovw(-7, 375);
+        width: calc(100% + ((1400 / 375) * 1vw));
+      }
+
       &::after {
         display: inline-block;
         content: '';
         flex: 10;
       }
     }
+
+    & + & {
+      position: relative;
+      margin-top: 19px;
+      padding-top: 26px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(19, 1660);
+        padding-top: pxtovw(26, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(19, 1366);
+        padding-top: pxtovw(26, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(19, 960);
+        padding-top: pxtovw(26, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(19, 375);
+        padding-top: pxtovw(24, 375);
+      }
+
+      &::before {
+        @include pseudo;
+
+        width: calc(100% - 12px);
+        top: 0;
+        left: 50%;
+        transform: translate3d(-50%, 0, 0);
+        border-top: 1px solid $nd-color-border3;
+
+        @include screen('xlg', max, 2) {
+          width: calc(100% - ((1200 / 1660) * 1vw));
+        }
+
+        @include screen('lg', max, 2) {
+          width: calc(100% - ((1200 / 1366) * 1vw));
+        }
+
+        @include screen('md', max, 2) {
+          width: calc(100% - ((1200 / 960) * 1vw));
+        }
+
+        @include screen('sm', max, 2) {
+          width: calc(100% - ((800 / 375) * 1vw));
+        }
+      }
+    }
   }
 
   &__check {
-    margin: 7px 4px;
+    margin: 7px 6px;
     flex: 1;
 
     @include screen('xlg', max, 2) {
-      margin: pxtovw(7, 1660) pxtovw(4, 1660);
+      margin: pxtovw(7, 1660) pxtovw(6, 1660);
     }
 
     @include screen('lg', max, 2) {
-      margin: pxtovw(7, 1366) pxtovw(4, 1366);
+      margin: pxtovw(7, 1366) pxtovw(6, 1366);
     }
 
     @include screen('md', max, 2) {
-      margin: pxtovw(7, 960) pxtovw(4, 960);
+      margin: pxtovw(7, 960) pxtovw(6, 960);
     }
 
     @include screen('sm', max, 2) {
       margin: pxtovw(7, 375) pxtovw(4, 375);
+    }
+
+    #{$b}__checklist_compress & {
+      margin: 7px;
+
+      @include screen('xlg', max, 2) {
+        margin: pxtovw(7, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin: pxtovw(7, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin: pxtovw(7, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin: pxtovw(7, 375);
+      }
     }
   }
 
@@ -754,15 +903,74 @@
     display: block;
     width: 100%;
 
+    @include screen('sm', max, 2) {
+      position: relative;
+    }
+
     &_active {
       .is-link-inactive & {
         display: none;
+
+        @include screen('sm', max, 2) {
+          z-index: 0;
+          display: block;
+        }
       }
     }
 
     &_inactive {
+      @include screen('sm', max, 2) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, .93);
+        z-index: 2;
+      }
+
       .is-link-active & {
         display: none;
+      }
+    }
+
+    #{$b}__button {
+      min-width: 200px;
+
+      @include screen('xlg', max, 2) {
+        min-width: pxtovw(200, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        min-width: pxtovw(200, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        min-width: pxtovw(200, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        min-width: pxtovw(210, 375);
+      }
+
+      &:not(:first-child) {
+        margin-top: 40px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(40, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(40, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(40, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(30, 375);
+        }
       }
     }
   }
