--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -739,6 +739,14 @@
         }
       }
     }
+
+    .loader {
+      position: relative;
+      left: 50%;
+      transform: translate3d(-50%, 0, 0);
+      align-self: center;
+      margin: 0 auto;
+    }
   }
 
   &__check {
