--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -163,7 +163,7 @@ block content
             +nd-form-box('.nd-choices_white')
               +nd-select().js-nd-select(name="v8" data-choices-classes="nd-choices_white")
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-                  option(value=item) option #{item}
+                  option(value='') option #{item}
           li
             +nd-form-box('.nd-textarea')
               +nd-textarea()(name="textarea")
