--- a/app/components/filter-menu/filter-menu.pug
+++ b/app/components/filter-menu/filter-menu.pug
@@ -74,9 +74,7 @@ mixin filter-menu(specific)
               +e.checklist_compress
                 each item in getData('filterCity.json')
                   +check-button(item.options)._hov-blue._h34.__check!=item.title
-              +e.checklist_compress
-                each item in getData('filterLocation.json')
-                  +check-button(item.options)._hov-blue._h34.__check!=item.title
+              +e.checklist_compress(data-nd-filter-areas-container)
     +e.item_team.nd-hide-sm
       +filter-button({class: 'js-nd-show-filter', name: 'Team size', filterName: 'teamSize', filterType: 'popup-block'})
       +filter-popup({submit: 'Show results - 27', reset: 'Clear team size filter', title: 'Team size', note: {text: "Start-up, scale-up, big business or just you – we have a perfect match for you."}})._team.__popup(data-nd-filter-popup="teamSize" data-nd-filter-popup-type="popup-block")
