--- a/app/blocks/form-elements/check-button.scss
+++ b/app/blocks/form-elements/check-button.scss
@@ -25,7 +25,7 @@
     letter-spacing: -.02em;
     padding: 10px 15px;
     cursor: pointer;
-    transition: border $ease-main, color $ease-main, background $ease-main;
+    transition: border $ease-main, color $ease-main, background $ease-main, transform $ease-main;
     white-space: nowrap;
     text-align: center;
 
@@ -80,6 +80,10 @@
 
     #{$b}:hover & {
       border-color: $nd-color-basic;
+    }
+
+    #{$b}:active & {
+      transform: scale(.96);
     }
 
     #{$b}_hov-blue:hover & {
