--- a/app/components/space-card/space-card.scss
+++ b/app/components/space-card/space-card.scss
@@ -634,6 +634,10 @@
       bottom: pxtovw(27, 375);
       min-width: pxtovw(125, 375);
     }
+
+    &:active {
+      transform: translate3d(-50%, 0, 0) scale(.96);
+    }
   }
 
   &__media {
