--- a/app/pages/deal-pass/deal-pass.pug
+++ b/app/pages/deal-pass/deal-pass.pug
@@ -37,7 +37,7 @@ block content
           +nd-side-navigation(nav, 'Dashboard')
       +nd-content-main
         +dashboard._rent
-          +board._shadow._fx.__board_rent._rent_rs
+          +board._shadow._fx._fx_row.__board_rent._rent_rs
             - var nav = getData('sideNavDealPassRent.json')
             +e.column.nd-hide-from-md
               +nd-space('div')._side-nav.__space(class=nav.space.class)
