--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -200,6 +200,13 @@
       border-color: $nd-color-main;
       box-shadow: inset 0 0 0 1px $nd-color-main;
     }
+
+    &:disabled, &.is-disabled {
+      border-color: $nd-color-field-border;
+      color: $nd-color-field-border;
+      pointer-events: none;
+      cursor: not-allowed;
+    }
   }
 
   .is-error & {
