--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -62,6 +62,18 @@
       pointer-events: auto;
     }
 
+    &_popup.is-open::after {
+      @include screen('sm', max, 2) {
+        transform: rotate(0);
+        z-index: 2;
+        pointer-events: none;
+      }
+    }
+
+    &.is-disabled::after {
+      background-image: url("data:image/svg+xml,%3Csvg width='10' height='7' viewBox='0 0 10 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L5 5L9 1' stroke='%23C8CCD0' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E ");
+    }
+
     #{$b} {
       &__inner {
         background-color: transparent;
@@ -266,45 +278,11 @@
 
     .is-open &, .is-open:hover & {
       border-color: $nd-color-main;
-      border-radius: 3px 3px 0 0;
-      box-shadow: inset -1px 1px 0 0 $nd-color-main, inset 1px 1px 0 0 $nd-color-main;
-
-      @include screen('xlg', max, 2) {
-        border-radius: pxtovw(3, 1660) pxtovw(3, 1660) 0 0;
-      }
-
-      @include screen('lg', max, 2) {
-        border-radius: pxtovw(3, 1366) pxtovw(3, 1366) 0 0;
-      }
-
-      @include screen('md', max, 2) {
-        border-radius: pxtovw(3, 960) pxtovw(3, 960) 0 0;
-      }
-
-      @include screen('sm', max, 2) {
-        border-radius: pxtovw(3, 375) pxtovw(3, 375) 0 0;
-      }
+      box-shadow: inset 0 0 0 1px $nd-color-main;
     }
 
-    .is-flipped.is-open & {
-      border-radius: 0 0 3px 3px;
-      box-shadow: inset -1px -1px 0 0 $nd-color-main, inset 1px -1px 0 0 $nd-color-main;
-
-      @include screen('xlg', max, 2) {
-        border-radius: 0 0 pxtovw(3, 1660) pxtovw(3, 1660);
-      }
-
-      @include screen('lg', max, 2) {
-        border-radius: 0 0 pxtovw(3, 1366) pxtovw(3, 1366);
-      }
-
-      @include screen('md', max, 2) {
-        border-radius: 0 0 pxtovw(3, 960) pxtovw(3, 960);
-      }
-
-      @include screen('sm', max, 2) {
-        border-radius: 0 0 pxtovw(3, 375) pxtovw(3, 375);
-      }
+    #{$b}_popup.is-open & {
+      pointer-events: none;
     }
 
     #{$b}_h40 & {
@@ -338,13 +316,38 @@
     padding-left: 0;
     list-style: none;
     z-index: 4;
-    scrollbar-color: $nd-color-basic $nd-color-bg;
+    scrollbar-color: $nd-color-scroll transparent;
     scrollbar-width: thin;
     -ms-overflow-style: none;
 
     &::-webkit-scrollbar-track {
+      width: 3px;
+      background-color: transparent;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(3, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(3, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(3, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(3, 375);
+      }
+    }
+
+    &::-webkit-scrollbar-track-piece {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar {
       width: 6px;
-      background-color: $nd-color-bg;
+      background-color: transparent;
 
       @include screen('xlg', max, 2) {
         width: pxtovw(6, 1660);
@@ -363,45 +366,37 @@
       }
     }
 
-    &::-webkit-scrollbar {
-      width: 4px;
-      background-color: $nd-color-bg;
-
-      @include screen('xlg', max, 2) {
-        width: pxtovw(4, 1660);
-      }
-
-      @include screen('lg', max, 2) {
-        width: pxtovw(4, 1366);
-      }
-
-      @include screen('md', max, 2) {
-        width: pxtovw(4, 960);
-      }
-
-      @include screen('sm', max, 2) {
-        width: pxtovw(4, 375);
-      }
-    }
-
     &::-webkit-scrollbar-thumb {
-      width: 4px;
-      background-color: $nd-color-basic;
+      border-width: 6px 3px 6px 0;
+      border-style: solid;
+      border-color: transparent;
+      width: 3px;
+      border-radius: 4px;
+      background-color: $nd-color-scroll;
+      background-clip: padding-box;
 
       @include screen('xlg', max, 2) {
-        width: pxtovw(4, 1660);
+        border-width: pxtovw(6, 1660) pxtovw(3, 1660) pxtovw(6, 1660) 0;
+        width: pxtovw(3, 1660);
+        border-radius: pxtovw(4, 1660);
       }
 
       @include screen('lg', max, 2) {
-        width: pxtovw(4, 1366);
+        border-width: pxtovw(6, 1366) pxtovw(3, 1366) pxtovw(6, 1366) 0;
+        width: pxtovw(3, 1366);
+        border-radius: pxtovw(4, 1366);
       }
 
       @include screen('md', max, 2) {
-        width: pxtovw(4, 960);
+        border-width: pxtovw(6, 960) pxtovw(3, 960) pxtovw(6, 960) 0;
+        width: pxtovw(3, 960);
+        border-radius: pxtovw(4, 960);
       }
 
       @include screen('sm', max, 2) {
-        width: pxtovw(4, 375);
+        border-width: pxtovw(6, 375) pxtovw(3, 375) pxtovw(6, 375) 0;
+        width: pxtovw(3, 375);
+        border-radius: pxtovw(4, 375);
       }
     }
 
@@ -471,6 +466,10 @@
         @include screen('sm', max, 2) {
           font-size: pxtovw(15, 375);
           line-height: (26 / 15);
+        }
+
+        .is-open & {
+          opacity: 0;
         }
       }
     }
@@ -573,49 +572,49 @@
       top: 0;
       display: flex;
       flex-direction: column;
-      // top: 100%;
-      // margin-top: -1px;
       box-sizing: border-box;
-      background-color: $nd-color-bg;
-      border: 1px solid $nd-color-main;
-      // border-top-color: $nd-color-field-border;
+      // background-color: $nd-color-bg;
+      // border: 1px solid $nd-color-main;
       width: 100%;
-      transition: opacity $ease-main, visibility $ease-main;
-      opacity: 0;
       pointer-events: none;
       touch-action: none;
       visibility: hidden;
-      border-radius: 3px;
-      overflow: hidden;
+      // border-radius: 3px;
+      // overflow: hidden;
       word-break: break-all;
       will-change: visibility;
-      box-shadow: inset 0 0 0 1px $nd-color-main;
+      // box-shadow: inset 0 0 0 1px $nd-color-main;
 
-      @include screen('xlg', max, 2) {
-        border-radius: pxtovw(3, 1660);
-      }
+      // @include screen('xlg', max, 2) {
+      //   border-radius: pxtovw(3, 1660);
+      // }
 
-      @include screen('lg', max, 2) {
-        border-radius: pxtovw(3, 1366);
-      }
+      // @include screen('lg', max, 2) {
+      //   border-radius: pxtovw(3, 1366);
+      // }
 
-      @include screen('md', max, 2) {
-        border-radius: pxtovw(3, 960);
-      }
+      // @include screen('md', max, 2) {
+      //   border-radius: pxtovw(3, 960);
+      // }
 
-      @include screen('sm', max, 2) {
-        border-radius: pxtovw(3, 375);
-      }
+      // @include screen('sm', max, 2) {
+      //   border-radius: pxtovw(3, 375);
+      // }
 
       &.is-active {
         visibility: visible;
         opacity: 1;
         pointer-events: auto;
         touch-action: auto;
+
+        #{$b}__list {
+          opacity: 1;
+        }
       }
 
       #{$b}_popup & {
         @include screen('sm', max, 2) {
+          background-color: $nd-color-basic-light;
           display: block;
         }
       }
@@ -630,7 +629,7 @@
         // border-radius: 3px 3px 0 0;
         // border-top-color: $nd-color-main;
         // border-bottom-color: $nd-color-field-border;
-        box-shadow: inset 0 0 0 1px $nd-color-main;
+        // box-shadow: inset 0 0 0 1px $nd-color-main;
 
         // @include screen('xlg', max, 2) {
         //   border-radius: pxtovw(3, 1660);
@@ -657,31 +656,36 @@
 
       #{$b}__item {
         position: relative;
-        font-size: 17px;
-        line-height: (26 / 17);
+        font-size: 18px;
+        line-height: (26 / 18);
         font-weight: 400;
         color: $nd-color-basic;
-        padding: 11px;
+        padding: 10px 15px;
+        border-radius: 3px;
 
         @include screen('xlg', max, 2) {
-          font-size: pxtovw(17, 1660);
-          padding: pxtovw(11, 1660);
+          border-radius: pxtovw(3, 1660);
+          font-size: pxtovw(18, 1660);
+          padding: pxtovw(10, 1660) pxtovw(15, 1660);
         }
 
         @include screen('lg', max, 2) {
-          font-size: pxtovw(17, 1366);
-          padding: pxtovw(11, 1366);
+          border-radius: pxtovw(3, 1366);
+          font-size: pxtovw(18, 1366);
+          padding: pxtovw(10, 1366) pxtovw(15, 1366);
         }
 
         @include screen('md', max, 2) {
-          font-size: pxtovw(17, 960);
-          padding: pxtovw(11, 960);
+          border-radius: pxtovw(3, 960);
+          font-size: pxtovw(18, 960);
+          padding: pxtovw(10, 960) pxtovw(15, 960);
         }
 
         @include screen('sm', max, 2) {
+          border-radius: pxtovw(3, 375);
           font-size: pxtovw(15, 375);
           line-height: (26 / 15);
-          padding: pxtovw(6, 375) pxtovw(11, 375);
+          padding: pxtovw(6, 375) pxtovw(10, 375);
         }
 
         [dir='rtl'] & {
@@ -692,7 +696,7 @@
           transition: background $ease-main, color $ease-main;
 
           &.is-highlighted {
-            background-color: $nd-color-basic;
+            background-color: $nd-color-main;
             color: $nd-color-basic-light;
           }
         }
@@ -728,30 +732,56 @@
       #{$b}__list {
         position: relative;
         overflow: auto;
-        max-height: 300px;
+        max-height: 245px;
         box-sizing: border-box;
         width: 100%;
         -webkit-overflow-scrolling: touch;
         will-change: scroll-position;
+        background-color: $nd-color-basic-light;
+        box-shadow: 0 2px 11px rgba(0, 0, 0, .09), 0 4px 19px rgba(0, 0, 0, .06);
+        border-radius: 3px;
+        margin-top: 6px;
+        padding: 17px 3px 17px 5px;
+        transition: opacity $ease-main;
+        opacity: 0;
 
         @include screen('xlg', max, 2) {
-          max-height: pxtovw(300, 1660);
+          box-shadow: 0 pxtovw(2, 1660) pxtovw(11, 1660) rgba(0, 0, 0, .09), 0 pxtovw(4, 1660) pxtovw(19, 1660) rgba(0, 0, 0, .06);
+          border-radius: pxtovw(3, 1660);
+          margin-top: pxtovw(6, 1660);
+          max-height: pxtovw(245, 1660);
+          padding: pxtovw(17, 1660) pxtovw(3, 1660) pxtovw(17, 1660) pxtovw(5, 1660);
         }
 
         @include screen('lg', max, 2) {
-          max-height: pxtovw(300, 1366);
+          box-shadow: 0 pxtovw(2, 1366) pxtovw(11, 1366) rgba(0, 0, 0, .09), 0 pxtovw(4, 1366) pxtovw(19, 1366) rgba(0, 0, 0, .06);
+          border-radius: pxtovw(3, 1366);
+          margin-top: pxtovw(6, 1366);
+          max-height: pxtovw(245, 1366);
+          padding: pxtovw(17, 1366) pxtovw(3, 1366) pxtovw(17, 1366) pxtovw(5, 1366);
         }
 
         @include screen('md', max, 2) {
-          max-height: pxtovw(300, 960);
+          box-shadow: 0 pxtovw(2, 960) pxtovw(11, 960) rgba(0, 0, 0, .09), 0 pxtovw(4, 960) pxtovw(19, 960) rgba(0, 0, 0, .06);
+          border-radius: pxtovw(3, 960);
+          margin-top: pxtovw(6, 960);
+          max-height: pxtovw(245, 960);
+          padding: pxtovw(17, 960) pxtovw(3, 960) pxtovw(17, 960) pxtovw(5, 960);
         }
 
         @include screen('sm', max, 2) {
+          box-shadow: 0 pxtovw(2, 375) pxtovw(11, 375) rgba(0, 0, 0, .09), 0 pxtovw(4, 375) pxtovw(19, 375) rgba(0, 0, 0, .06);
+          border-radius: pxtovw(3, 375);
+          margin-top: pxtovw(6, 375);
           max-height: pxtovw(200, 375);
+          padding: pxtovw(17, 375) pxtovw(3, 375) pxtovw(17, 375) pxtovw(5, 375);
         }
 
         #{$b}_popup & {
           @include screen('sm', max, 2) {
+            border-radius: 0;
+            box-shadow: none;
+            margin-top: 0;
             box-sizing: border-box;
             max-height: 100%;
           }
@@ -799,7 +829,7 @@
     &--disabled {
       cursor: not-allowed;
       user-select: none;
-      opacity: .5;
+      color: $nd-color-field-border;
     }
   }
 
@@ -1034,12 +1064,14 @@
 
   &.is-disabled #{$b} {
     &__inner, &__input {
-      opacity: .2;
+      color: $nd-color-field-border;
+      border-color: $nd-color-field-border;
       cursor: not-allowed;
       user-select: none;
     }
 
     &__item {
+      color: $nd-color-field-border;
       cursor: not-allowed;
     }
   }
