--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -304,7 +304,7 @@
     }
 
     #{$b}:hover & {
-      background-color: $nd-color-basic;
+      background-color: $nd-color-main;
     }
 
     &:not(:first-child) {
