--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -324,8 +324,6 @@
     }
 
     &_spaces {
-      padding-bottom: 10px;
-
       @include screen('sm', max, 2) {
         margin: 0 pxtovw(-20, 375);
         width: calc(100% + ((4000 / 375) * 1vw));
@@ -353,11 +351,23 @@
       }
 
       .nd-slider__container {
+        padding-bottom: 10px;
+
+        @include screen('xlg', max, 2) {
+          padding-bottom: pxtovw(10, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-bottom: pxtovw(10, 1366);
+        }
+
         @include screen('md', max, 2) {
+          padding-bottom: pxtovw(10, 960);
           overflow: hidden;
         }
 
         @include screen('sm', max, 2) {
+          padding-bottom: pxtovw(10, 375);
           overflow: visible;
         }
       }
