--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -222,6 +222,7 @@
     background-position: 100% 50%;
     background-image: $icon-arrow-next;
     background-size: 13px 8px;
+    cursor: pointer;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(18, 1660);
@@ -276,6 +277,34 @@
 
       @include screen('sm', max, 2) {
         margin-right: 0;
+      }
+    }
+
+    span {
+      display: inline-block;
+      vertical-align: top;
+      background-position: 0 calc(50% + .5em);
+      background-size: 2px 2px;
+      background-repeat: repeat-x;
+
+      @include screen('xlg', max, 2) {
+        background-size: pxtovw(2, 1660) pxtovw(2, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        background-size: pxtovw(2, 1366) pxtovw(2, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        background-size: pxtovw(2, 960) pxtovw(2, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        background-size: pxtovw(2, 375) pxtovw(2, 375);
+      }
+
+      #{$b}:hover & {
+        background-image: linear-gradient($nd-color-main, $nd-color-main);
       }
     }
   }
