--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -139,6 +139,9 @@ block content
               +nd-input()._date(type="text" name="v3" data-dates-result readonly)
               +e.dates(data-dates-container)
           li
+            +nd-form-box('.nd-input disabled')
+              +nd-input()(type="text" name="vdis" disabled)
+          li
             +nd-form-box('.nd-choices')
               +nd-select().js-nd-select(name="v4")
                 option(placeholder)
@@ -160,10 +163,10 @@ block content
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
           li
-            +nd-form-box('.nd-choices_white')
-              +nd-select().js-nd-select(name="v8" data-choices-classes="nd-choices_white")
+            +nd-form-box('.nd-choices disabled')
+              +nd-select().js-nd-select(name="v8" disabled)
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-                  option(value='') option #{item}
+                  option(value=item) option #{item}
           li
             +nd-form-box('.nd-textarea')
               +nd-textarea()(name="textarea")
