--- a/app/components/rs-form/rs-form.pug
+++ b/app/components/rs-form/rs-form.pug
@@ -8,7 +8,7 @@ mixin rs-form()
         +nd-grid-col({xl: 9, sm: 12})
           +form-section-wrapper
             +nd-form-box('Offer')
-              +nd-select(name="offer" placeholder="Offer" required data-choices-popup="data-choices-popup" data-mobile-title="Offer").js-nd-select
+              +nd-select(name="offer" placeholder="Offer" required data-mobile-title="Offer").js-nd-select
                 option(value="" placeholder)
                 option(value="1") First Floor Desk Area
                 option(value="2") Second Floor Desk Area
@@ -25,7 +25,7 @@ mixin rs-form()
         +nd-grid-col({xl: 6, sm: 12})
           +form-section-wrapper
             +nd-form-box('Rent period')
-              +nd-select(name="rentPeriod" placeholder="Rent period" required data-choices-popup="data-choices-popup" data-mobile-title="Rent period").js-nd-select
+              +nd-select(name="rentPeriod" placeholder="Rent period" required data-mobile-title="Rent period").js-nd-select
                 option(value="" placeholder)
                 - for (var i = 1; i <= 12; i++) {
                   if (i==1)
