--- a/app/components/registration-form/registration-form.pug
+++ b/app/components/registration-form/registration-form.pug
@@ -88,7 +88,7 @@ mixin registration-form(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Nationality')
-                  +nd-select(name="nationality" placeholder="Nationality" required data-choices-popup="data-choices-popup" data-mobile-title="Nationality").js-nd-select
+                  +nd-select(name="nationality" placeholder="Nationality" required data-mobile-title="Nationality").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
                     option(value="2") Latvian
@@ -97,7 +97,7 @@ mixin registration-form(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Country of residence')
-                  +nd-select(name="countryOfResidence" placeholder="Country of residence" required data-choices-popup="data-choices-popup" data-mobile-title="Country of residence").js-nd-select
+                  +nd-select(name="countryOfResidence" placeholder="Country of residence" required data-mobile-title="Country of residence").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
                     option(value="2") Latvia
@@ -126,7 +126,7 @@ mixin registration-form(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
                 +nd-form-box('City')
-                  +nd-select(name="city" placeholder="City" data-choices-popup="data-choices-popup" data-mobile-title="City").js-nd-select
+                  +nd-select(name="city" placeholder="City" data-mobile-title="City").js-nd-select
                     option(value="" placeholder)
                     option(value="1") London
                     option(value="2") Moscow
@@ -135,7 +135,7 @@ mixin registration-form(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
                 +nd-form-box('Country')
-                  +nd-select(name="country" placeholder="Country" required data-choices-popup="data-choices-popup" data-mobile-title="Country").js-nd-select
+                  +nd-select(name="country" placeholder="Country" required data-mobile-title="Country").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
                     option(value="2") Latvia
@@ -163,7 +163,7 @@ mixin registration-form(data)
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
                 +nd-form-box('Nationality')
-                  +nd-select(name="nationalityDirector" placeholder="Nationality" required data-choices-popup="data-choices-popup" data-mobile-title="Nationality").js-nd-select
+                  +nd-select(name="nationalityDirector" placeholder="Nationality" required data-mobile-title="Nationality").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
                     option(value="2") Latvian
@@ -172,7 +172,7 @@ mixin registration-form(data)
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
                 +nd-form-box('Country of residence')
-                  +nd-select(name="countryOfResidenceDirector" placeholder="Country of residence" required data-choices-popup="data-choices-popup" data-mobile-title="Country of residence").js-nd-select
+                  +nd-select(name="countryOfResidenceDirector" placeholder="Country of residence" required data-mobile-title="Country of residence").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
                     option(value="2") Latvia
@@ -290,7 +290,7 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Nationality')
-                  +nd-select(name="nationality" placeholder="Nationality" required data-choices-popup="data-choices-popup" data-mobile-title="Nationality").js-nd-select
+                  +nd-select(name="nationality" placeholder="Nationality" required data-mobile-title="Nationality").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
                     option(value="2") Latvian
@@ -299,7 +299,7 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
                 +nd-form-box('Country of residence')
-                  +nd-select(name="countryOfResidence" placeholder="Country of residence" required data-choices-popup="data-choices-popup" data-mobile-title="Country of residence").js-nd-select
+                  +nd-select(name="countryOfResidence" placeholder="Country of residence" required data-mobile-title="Country of residence").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
                     option(value="2") Latvia
@@ -328,7 +328,7 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
                 +nd-form-box('City')
-                  +nd-select(name="city" placeholder="City" data-choices-popup="data-choices-popup" data-mobile-title="City").js-nd-select
+                  +nd-select(name="city" placeholder="City" data-mobile-title="City").js-nd-select
                     option(value="" placeholder)
                     option(value="1") London
                     option(value="2") Moscow
@@ -337,7 +337,7 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
                 +nd-form-box('Country')
-                  +nd-select(name="country" placeholder="Country" required data-choices-popup="data-choices-popup" data-mobile-title="Country").js-nd-select
+                  +nd-select(name="country" placeholder="Country" required  data-mobile-title="Country").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
                     option(value="2") Latvia
@@ -374,7 +374,7 @@ mixin registration-form-summary(data)
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
                 +nd-form-box('Country of residence')
-                  +nd-select(name="countryOfResidenceDirector" placeholder="Country of residence" data-choices-popup="data-choices-popup" data-mobile-title="Country of residence" required).js-nd-select
+                  +nd-select(name="countryOfResidenceDirector" placeholder="Country of residence" data-mobile-title="Country of residence" required).js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
                     option(value="2") Latvia
