fix focus in select input

--- a/app/blocks/arrange-viewing-form/arrange-viewing-form.pug
+++ b/app/blocks/arrange-viewing-form/arrange-viewing-form.pug
@@ -5,7 +5,7 @@ mixin arrange-viewing-form()
       +e.date(data-dates-alternative-result)
     +e.bottom
       +e.time
-        +nd-form-box('Time')._bg-white
+        +nd-form-box('Time', 'div')._bg-white
           +nd-select()(name="arrangeViewingTime" data-choices-classes=" nd-choices_white nd-choices_h40" data-mobile-title="Pick a time" ).js-nd-select
             - for (var i = 0; i < 24; i++) {
               - var zeroi = (`0${i}`).slice(-2);
