--- a/app/components/rs-form/rs-form.pug
+++ b/app/components/rs-form/rs-form.pug
@@ -7,7 +7,7 @@ mixin rs-form()
       +nd-grid.nd-grid_gap25.nd-grid_int28
         +nd-grid-col({xl: 9, sm: 12})
           +form-section-wrapper
-            +nd-form-box('Offer')
+            +nd-form-box('Offer', 'div')
               +nd-select(name="offer" placeholder="Offer" required data-mobile-title="Offer").js-nd-select
                 option(value="" placeholder)
                 option(value="1") First Floor Desk Area
@@ -24,7 +24,7 @@ mixin rs-form()
               +e.dates(data-dates-container)
         +nd-grid-col({xl: 6, sm: 12})
           +form-section-wrapper
-            +nd-form-box('Rent period')
+            +nd-form-box('Rent period', 'div')
               +nd-select(name="rentPeriod" placeholder="Rent period" required data-mobile-title="Rent period").js-nd-select
                 option(value="" placeholder)
                 - for (var i = 1; i <= 12; i++) {
