--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -142,28 +142,28 @@ block content
             +nd-form-box('.nd-input disabled')
               +nd-input()(type="text" name="vdis" disabled)
           li
-            +nd-form-box('.nd-choices')
+            +nd-form-box('.nd-choices', 'div')
               +nd-select().js-nd-select(name="v4")
                 option(placeholder)
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
           li
-            +nd-form-box('.nd-choices_h40')._h40
+            +nd-form-box('.nd-choices_h40', 'div')._h40
               +nd-select().js-nd-select(name="v5" data-choices-classes="nd-choices_h40")
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
           li
-            +nd-form-box('.nd-choices_open')
+            +nd-form-box('.nd-choices_open', 'div')
               +nd-select().js-nd-select(name="v6" data-choices-classes="nd-choices_open")
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
           li
-            +nd-form-box('.nd-choices_popup')
+            +nd-form-box('.nd-choices_popup', 'div')
               +nd-select().js-nd-select(name="v7" data-choices-popup="data-choices-popup" data-mobile-title="Choices Popup")
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
           li
-            +nd-form-box('.nd-choices disabled')
+            +nd-form-box('.nd-choices disabled', 'div')
               +nd-select().js-nd-select(name="v8" disabled)
                 each item in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
                   option(value=item) option #{item}
