--- a/app/components/registration-form/registration-form.pug
+++ b/app/components/registration-form/registration-form.pug
@@ -87,7 +87,7 @@ mixin registration-form(data)
                   +e.dates(data-dates-container)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
-                +nd-form-box('Nationality')
+                +nd-form-box('Nationality', 'div')
                   +nd-select(name="nationality" placeholder="Nationality" required data-mobile-title="Nationality").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
@@ -96,7 +96,7 @@ mixin registration-form(data)
                     option(value="4") English
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
-                +nd-form-box('Country of residence')
+                +nd-form-box('Country of residence', 'div')
                   +nd-select(name="countryOfResidence" placeholder="Country of residence" required data-mobile-title="Country of residence").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
@@ -125,7 +125,7 @@ mixin registration-form(data)
                   +nd-input(type="text" name="addressLine2" placeholder="Address line 2")
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
-                +nd-form-box('City')
+                +nd-form-box('City', 'div')
                   +nd-select(name="city" placeholder="City" data-mobile-title="City").js-nd-select
                     option(value="" placeholder)
                     option(value="1") London
@@ -134,7 +134,7 @@ mixin registration-form(data)
                     option(value="4") Riga
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
-                +nd-form-box('Country')
+                +nd-form-box('Country', 'div')
                   +nd-select(name="country" placeholder="Country" required data-mobile-title="Country").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
@@ -162,7 +162,7 @@ mixin registration-form(data)
                   +nd-input(type="text" name="lastNameDirector" placeholder="Last name" required)
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
-                +nd-form-box('Nationality')
+                +nd-form-box('Nationality', 'div')
                   +nd-select(name="nationalityDirector" placeholder="Nationality" required data-mobile-title="Nationality").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
@@ -171,7 +171,7 @@ mixin registration-form(data)
                     option(value="4") English
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
-                +nd-form-box('Country of residence')
+                +nd-form-box('Country of residence', 'div')
                   +nd-select(name="countryOfResidenceDirector" placeholder="Country of residence" required data-mobile-title="Country of residence").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
@@ -289,7 +289,7 @@ mixin registration-form-summary(data)
                   +e.dates(data-dates-container)
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
-                +nd-form-box('Nationality')
+                +nd-form-box('Nationality', 'div')
                   +nd-select(name="nationality" placeholder="Nationality" required data-mobile-title="Nationality").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
@@ -298,7 +298,7 @@ mixin registration-form-summary(data)
                     option(value="4") English
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="privatePerson")
               +form-section-wrapper
-                +nd-form-box('Country of residence')
+                +nd-form-box('Country of residence', 'div')
                   +nd-select(name="countryOfResidence" placeholder="Country of residence" required data-mobile-title="Country of residence").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
@@ -327,7 +327,7 @@ mixin registration-form-summary(data)
                   +nd-input(type="text" name="addressLine2" placeholder="Address line 2")
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
-                +nd-form-box('City')
+                +nd-form-box('City', 'div')
                   +nd-select(name="city" placeholder="City" data-mobile-title="City").js-nd-select
                     option(value="" placeholder)
                     option(value="1") London
@@ -336,7 +336,7 @@ mixin registration-form-summary(data)
                     option(value="4") Riga
             +nd-grid-col({xl: 6, sm: 12})(data-form-switchable-item="legalEntity")
               +form-section-wrapper
-                +nd-form-box('Country')
+                +nd-form-box('Country', 'div')
                   +nd-select(name="country" placeholder="Country" required  data-mobile-title="Country").js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
@@ -364,7 +364,7 @@ mixin registration-form-summary(data)
                   +nd-input(type="text" name="lastNameDirector" placeholder="Last name" required)
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
-                +nd-form-box('Nationality')
+                +nd-form-box('Nationality', 'div')
                   +nd-select(name="nationalityDirector" placeholder="Nationality" required).js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russian
@@ -373,7 +373,7 @@ mixin registration-form-summary(data)
                     option(value="4") English
             +nd-grid-col({xl: 6, sm: 12})
               +form-section-wrapper
-                +nd-form-box('Country of residence')
+                +nd-form-box('Country of residence', 'div')
                   +nd-select(name="countryOfResidenceDirector" placeholder="Country of residence" data-mobile-title="Country of residence" required).js-nd-select
                     option(value="" placeholder)
                     option(value="1") Russia
