--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -702,6 +702,10 @@
       &--dropdown {
         min-width: 0;
         width: 290px;
+
+        #{$k}__placeholder {
+          display: block;
+        }
       }
     }
 
