--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -92,7 +92,7 @@ mixin filter-reservations()
           +e.text.hide-sm Show
           +select.js-select-dark3(name="area" style="width: 56px;" placeholder="Deal status")
             option(value="all" selected) All deal statuses
-            option(value="Request") Request
-            option(value="Upcoming") Upcoming event
-            option(value="Active") Active contract
-            option(value="Finished") Finished contract
+            option(value="") Request
+            option(value="") Upcoming event
+            option(value="") Active contract
+            option(value="") Finished contract
