add all locations to search

--- a/app/blocks/filter-popup/filter-popup.scss
+++ b/app/blocks/filter-popup/filter-popup.scss
@@ -281,6 +281,10 @@
       @include screen('sm', max, 2) {
         padding: pxtovw(60, 375) pxtovw(20, 375) pxtovw(80, 375);
       }
+
+      .nd-form__checklist:empty {
+        padding-top: 0;
+      }
     }
 
     #{$b}_offers & {
